<?xml version="1.0" encoding="UTF-8"?>
<!--

    The MIT License
    Copyright (c) 2012 Microsoft Corporation

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.eischet</groupId>
    <artifactId>ews-java-api</artifactId>
    <packaging>pom</packaging>

    <version>2.2-SNAPSHOT</version>

    <name>Exchange Web Services Java API</name>
    <description>Exchange Web Services (EWS) Java API</description>

    <!-- Required by the site command for certain relative URL configuration. -->
    <url>http://www.microsoft.com/</url>

    <!-- Used by the javadoc plugin to generate the comments at the bottom. -->
    <inceptionYear>2012</inceptionYear>

    <organization>
        <name>Microsoft</name>
        <url>http://www.microsoft.com/</url>
    </organization>

    <developers>
        <developer>
            <id>vboctor</id>
            <name>Victor Boctor</name>
            <email>vboctor@users.noreply.github.com</email>
            <url>http://www.github.com/officedev/ews-java-api</url>
            <organization>Microsoft</organization>
            <organizationUrl>http://www.microsoft.com</organizationUrl>
            <roles>
                <role>administrator</role>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
        <developer>
            <id>se</id>
            <name>Stefan Eischet</name>
            <url>https://github.com/eischet/ews-java-api</url>
            <organization>Eischet Software e.K.</organization>
            <roles>
                <role>forker</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>

        <!-- TODO: clean up the JavaDocs -->
        <javadoc.doclint.param>-Xdoclint:none</javadoc.doclint.param>

        <!--  Dependencies [BUILD]:  -->
        <maven-checkstyle-plugin.version>2.16</maven-checkstyle-plugin.version>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
        <nexus-staging-maven-plugin.version>1.6.5</nexus-staging-maven-plugin.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <animal-sniffer-maven-plugin.version>1.14</animal-sniffer-maven-plugin.version>
        <animal-sniffer-maven-plugin.signature.version>1.1</animal-sniffer-maven-plugin.signature.version>
        <!--  Dependencies [REPORT]:  -->
        <maven-site-plugin.version>3.4</maven-site-plugin.version>
        <maven-project-info-reports-plugin.version>2.8</maven-project-info-reports-plugin.version>
        <versions-maven-plugin.version>2.2</versions-maven-plugin.version>
        <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
        <maven-surefire-report-plugin.version>2.18.1</maven-surefire-report-plugin.version>
        <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
        <!--  Dependencies [COMPILE]:  -->
        <httpclient.version>4.5.14</httpclient.version> <!-- latest, but still outdated, http client v4 -->
        <httpclient5.version>5.2.1</httpclient5.version>
        <!--  Dependencies [TEST]:  -->
        <junit.version>4.13.2</junit.version>
        <hamcrest-all.version>1.3</hamcrest-all.version>
        <mockito-core.version>4.2.0</mockito-core.version>
        <slf4j.version>1.7.32</slf4j.version>
        <logback.version>1.2.10</logback.version>

        <!-- <skipTests>true</skipTests> -->
    </properties>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <issueManagement>
        <url>https://github.com/OfficeDev/ews-java-api/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <scm>
        <url>https://github.com/OfficeDev/ews-java-api</url>
        <connection>scm:git:ssh://git@github.com:OfficeDev/ews-java-api.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:OfficeDev/ews-java-api.git</developerConnection>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>


    <build>
        <plugins>
            <!-- Deployment / build plugins -->
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus-staging-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- Ref.: http://books.sonatype.com/nexus-book/reference/staging-deployment.html -->
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <linksource>true</linksource>
                    <additionalparam>${javadoc.doclint.param}</additionalparam>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Deployment / build plugins END -->
        </plugins>
        <!-- Used to bump all of the various core plugins up to Maven current.
            Use this in conjunction with the versions-maven-plugin to keep your Maven
            plugins up to date. -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven-site-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <reporting>
        <plugins>
            <!-- Basic report generation. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${maven-project-info-reports-plugin.version}</version>
            </plugin>

            <!-- Dependency version reporting. Relies on standard version numbering
                - you should use standard version numbering too!
                http://mojo.codehaus.org/versions-maven-plugin/version-rules.html -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>

        </plugins>
    </reporting>

    <modules>
        <module>ews-api</module>
        <module>ews-client-apache4</module> <!-- old client as built by microsoft, depends on Apache HTTP Client 4.x -->
        <module>ews-client-java</module>

        <module>ews-client-apache5</module>

    </modules>

</project>
